[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/UI/background 2.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/Top UI v 2.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/Bottom UI v 2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/IceHolder.gd" type="Script" id=5]
[ext_resource path="res://Scripts/LockHolder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ConcreteHolder.gd" type="Script" id=7]

[node name="GameWindow" type="Node2D" index="0"]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0

[node name="TopUI" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="BottomUI" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Grid" type="Node2D" parent="." index="3"]

script = ExtResource( 4 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2
empty_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5 )
ice_spaces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )
lock_spaces = PoolVector2Array( 3, 2, 4, 2, 3, 7, 4, 7 )
concrete_spaces = PoolVector2Array( 3, 1, 4, 1, 3, 8, 4, 8 )

[node name="IceHolder" type="Node2D" parent="." index="4"]

script = ExtResource( 5 )

[node name="LockHolder" type="Node2D" parent="." index="5"]

script = ExtResource( 6 )

[node name="ConcreteHolder" type="Node2D" parent="." index="6"]

script = ExtResource( 7 )

[node name="DestroyTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="CollapseTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="RefillTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[connection signal="create_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_create_concrete"]

[connection signal="create_ice" from="Grid" to="IceHolder" method="_on_Grid_create_ice"]

[connection signal="create_lock" from="Grid" to="LockHolder" method="_on_Grid_create_lock"]

[connection signal="damage_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_damage_concrete"]

[connection signal="damage_ice" from="Grid" to="IceHolder" method="_on_Grid_damage_ice"]

[connection signal="damage_lock" from="Grid" to="LockHolder" method="_on_Grid_damage_lock"]

[connection signal="remove_lock" from="LockHolder" to="Grid" method="_on_LockHolder_remove_lock"]

[connection signal="remove_concrete" from="ConcreteHolder" to="Grid" method="_on_ConcreteHolder_remove_concrete"]

[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]

[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_CollapseTimer_timeout"]

[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_RefillTimer_timeout"]


